# ACTIX_REST_MVC

./: Cargo.toml  Dockerfile  Dockerfile.Diesel  README.md  docker-compose.yml  docker-compose_diesel.yml
migrations/2024-09-08-104114_create_users/: up.sql
src/: main.rs  schema.rs
src/controllers/: auth.rs  todo.rs
src/db/: connect.rs
src/models/: user.rs
src/routes/: auth.rs  todo.rs
src/utils/: bcrypt.rs  jwt.rs  mod.rs
