[package]
name = "ACTIX_REST_MVC"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-session = { version = "0.10.0", features = ["cookie-session"] }
actix-web = "4.9.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
env_logger = "0.11.5"
jsonwebtoken = "9.3.0"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
